<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:animateLayoutChanges="true"
              android:clickable="true"
              android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_report_draft_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape_round_corners"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/text_tv_report_draft_label"
                android:textColor="@android:color/black"/>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_report_text"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="5dp"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardPreventCornerOverlap="false"
                card_view:contentPadding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_report_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:theme="@style/EditText">

                    <EditText
                        android:id="@+id/edt_report_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_edt_report_text"
                        android:maxLength="5000"
                        android:textSize="16sp"/>

                </android.support.design.widget.TextInputLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_report_photos"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="5dp"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:id="@+id/tv_report_photos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:text="@string/text_tv_report_photos"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_report_photos_description"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:layout_weight="1"
                                android:text="@string/text_tv_report_photos_description"/>

                            <Button
                                android:id="@+id/btn_report_add_photo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:text="@string/text_btn_report_add_photo"
                                android:textAllCaps="true"
                                android:textColor="@color/color_0099ff"/>

                        </LinearLayout>

                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_report_photos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp">

                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_report_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/text_btn_report_submit"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:theme="@style/Button"/>

</LinearLayout>
